# Company_China

./: .vercelignore  imprint.html  index.html  privacy.html
scraping/: .env.example  .gitignore  pyproject.toml
scraping/assessment/: language.py  performance.py  runner.py  scoring.py
scraping/config/: settings.py
scraping/contacts/: email_finder.py  mic_contacts.py
scraping/db/: init_db.py  models.py
scraping/pipeline/: exporter.py  orchestrator.py
scraping/sources/: alibaba.py  alibaba_requests.py  alibaba_sellers.py  amazon_eu.py  company_registries.py  etsy.py  facebook_ads.py  impressum.py  kickstarter.py  trade_shows.py
scraping/utils/: domain_finder.py  http.py  mic_session.py  skip_domains.py
scripts/: make-email-logo.py  make-og-image.py
